--- a/example/react/index.html
+++ b/example/react/index.html
@@ -12,9 +12,12 @@
         }
         window.PromiseRejectionEvent = function () {};
     </script>
-    <title>REACT EXAMPLE</title>
+    <link rel="stylesheet" type="text/css" href="./main.css" >
+    <title>REACT COMPONENT</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div class="app" id="root" ></div>
+    <script src="./vendor/vendor.dll.js" ></script>
+    <script src="./main.js" ></script>
 </body>
 </html>
